--- a/rebar.config
+++ b/rebar.config
@@ -10,10 +10,11 @@
 
 %% What dependencies we have
 {deps, [
-  {lager, {git, "https://github.com/erlang-lager/lager.git", {tag, "3.6.8"}}},
+  {lager, {git, "https://github.com/erlang-lager/lager.git", {tag, "3.8.0"}}},
   {gun, {git, "https://github.com/ninenines/gun.git", {tag, "1.3.0"}}},
-  {basin, {git, "git@bitbros.com:/basin", {branch, "master"}}},
-  {maxwell_protocol, {git, "git@bitbros.com:/maxwell-protocol-erlang", {branch, "master"}}}
+  {maxwell_protocol, 
+    {git, "https://github.com/maxwell-dev/maxwell-protocol-erlang.git", {branch, "master"}}
+  }
 ]}.
 
 {relx, [
