--- a/rebar.config
+++ b/rebar.config
@@ -10,8 +10,8 @@
 
 %% What dependencies we have
 {deps, [
-  {lager, {git, "https://github.com/erlang-lager/lager.git", {tag, "3.8.0"}}},
-  {gun, {git, "https://github.com/ninenines/gun.git", {tag, "1.3.0"}}},
+  {lager, "3.8.0"},
+  {gun, "1.3.1"},
   {maxwell_protocol, 
     {git, "https://github.com/maxwell-dev/maxwell-protocol-erlang.git", {branch, "master"}}
   }
