--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,7 @@
   {lager, "3.9.1"},
   {gun, "1.3.3"},
   {maxwell_protocol, 
-    {git, "https://github.com/maxwell-dev/maxwell-protocol-erlang.git", {branch, "master"}}
+    {git, "https://github.com/maxwell-dev/maxwell-protocol-erlang.git", {tag, "v0.5.0"}}
   }
 ]}.
 
